--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,8 @@ android {
         applicationId 'ru.yandex.yamblz'
         minSdkVersion versions.minSdk
         targetSdkVersion versions.targetSdk
-        versionCode versions.code // Notice that you may want to use BUILD_NUMBER from CI in real project with own CI.
+        versionCode versions.code
+        // Notice that you may want to use BUILD_NUMBER from CI in real project with own CI.
         versionName versions.name
 
         // Make generated apks contain version name and code.
@@ -84,6 +85,7 @@ android {
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    implementation 'com.android.support:support-v4:23.4.0'
     compile libraries.dagger
     annotationProcessor libraries.daggerCompiler
 
