ArtistFragment in action

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,9 +83,9 @@ android {
 
 // Libraries declared in dependencies.gradle in the root of the project
 dependencies {
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.google.code.gson:gson:2.8.5'
 
-    implementation 'com.android.support:support-v4:23.4.0'
     compile libraries.dagger
     annotationProcessor libraries.daggerCompiler
 
