--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ android {
 
 // Libraries declared in dependencies.gradle in the root of the project
 dependencies {
+    implementation 'com.android.support:support-v4:23.4.0'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.google.code.gson:gson:2.8.5'
 
